@@ -1,6 +1,7 @@
 package com.example.intelliwealth.service;
 
-import com.example.intelliwealth.dto.transactions.TransactionDTO;
+import com.example.intelliwealth.dto.transactions.TransactionRequestDTO;
+import com.example.intelliwealth.dto.transactions.TransactionResponseDTO;
 import com.example.intelliwealth.mapper.transactions.TransactionMapper;
 import com.example.intelliwealth.model.Transaction;
 import com.example.intelliwealth.repository.TransactionsRepository;
@@ -10,38 +11,38 @@ import org.springframework.stereotype.Service;
 import java.math.BigDecimal;
 import java.util.List;
 import java.util.stream.Collectors;
-
 @Service
 public class TransactionService {
 
-    @Autowired
-    private TransactionsRepository repo;
+    private final TransactionsRepository repo;
+    private final TransactionMapper mapper;
 
     @Autowired
-    private TransactionMapper mapper;
+    public TransactionService(TransactionsRepository repo, TransactionMapper mapper) {
+        this.repo = repo;
+        this.mapper = mapper;
+    }
 
     // ===================== GET =====================
 
-    public List<TransactionDTO> getAllTransactions() {
+    public List<TransactionResponseDTO> getAllTransactions() {
         return repo.findAll()
                 .stream()
-                .map(mapper::toDTO)
-                .collect(Collectors.toList());
+                .map(mapper::toResponse)
+                .toList();
     }
 
-    public TransactionDTO getTransactionById(int transactionNum) {
-        Transaction entity = repo.findById(transactionNum)
-                .orElseThrow(() ->
-                        new IllegalArgumentException("Transaction not found with id: " + transactionNum));
-
-        return mapper.toDTO(entity);
+    public TransactionResponseDTO getTransactionById(int id) {
+        Transaction transaction = repo.findById(id)
+                .orElseThrow(() -> new IllegalArgumentException("Transaction not found: " + id));
+        return mapper.toResponse(transaction);
     }
 
-    public List<TransactionDTO> getTransactionsByType(String type) {
-        return repo.findByType(type)
+    public List<TransactionResponseDTO> searchTransactions(String keyword) {
+        return repo.findByDescriptionContainingIgnoreCase(keyword)
                 .stream()
-                .map(mapper::toDTO)
-                .collect(Collectors.toList());
+                .map(mapper::toResponse)
+                .toList();
     }
 
     // ===================== CALCULATIONS =====================
@@ -64,47 +65,31 @@ public class TransactionService {
         return getIncomeAmount().subtract(getExpenseAmount());
     }
 
-    // ===================== SEARCH =====================
-
-    public List<TransactionDTO> searchTransactions(String keyword) {
-        return repo.findByDescriptionContainingIgnoreCase(keyword)
-                .stream()
-                .map(mapper::toDTO)
-                .collect(Collectors.toList());
-    }
-
     // ===================== POST =====================
 
-    public TransactionDTO createTransaction(TransactionDTO dto) {
-        Transaction entity = mapper.toEntity(dto);
+    public TransactionResponseDTO createTransaction(TransactionRequestDTO request) {
+        Transaction entity = mapper.toEntity(request);
         Transaction saved = repo.save(entity);
-        return mapper.toDTO(saved);
+        return mapper.toResponse(saved);
     }
 
     // ===================== PUT =====================
 
-    public TransactionDTO updateTransaction(int id, TransactionDTO dto) {
+    public TransactionResponseDTO updateTransaction(int id, TransactionRequestDTO request) {
         Transaction existing = repo.findById(id)
-                .orElseThrow(() ->
-                        new IllegalArgumentException("Transaction not found with id: " + id));
+                .orElseThrow(() -> new IllegalArgumentException("Transaction not found: " + id));
 
-        existing.setType(dto.getType());
-        existing.setDescription(dto.getDescription());
-        existing.setAmount(dto.getAmount());
-        existing.setCategory(dto.getCategory());
-        existing.setSource(dto.getSource());
-        existing.setTransactionId(dto.getTransactionId());
-        existing.setCreatedAt(dto.getCreatedAt());
+        existing.setType(request.getType());
+        existing.setDescription(request.getDescription());
+        existing.setAmount(request.getAmount());
+        existing.setCategory(request.getCategory());
+        existing.setSource(request.getSource());
 
         Transaction updated = repo.save(existing);
-        return mapper.toDTO(updated);
+        return mapper.toResponse(updated);
     }
 
     // ===================== DELETE =====================
-
-    public void deleteTransaction(int id) {
-        repo.deleteById(id);
-    }
 
     public void deleteAllTransactions() {
         repo.deleteAll();
